--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2470,6 +2470,15 @@
 			-ms-flex: 1;
 		}
 
+		.image.left-big {
+			float: left;
+			display: block;
+			margin: 0 0 2em 0;
+			width: 50%;
+
+			margin: 0 1.5em 1em 0;
+		}
+
 		.image.fit {
 			display: block;
 			margin: 0 0 2em 0;
