--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2369,6 +2369,13 @@
 				.box .image.featured:last-child img {
 					border-radius: 0 0 6px 6px;
 				}
+	.box-little {
+		background: #fff;
+		border-radius: 6px;
+		box-shadow: 0 2px 0 0 #e5e5e5;
+		margin: 0 0 2em 0;
+		padding: 0em;
+	}
 
 /* Icon */
 
